--- a/web/index.html
+++ b/web/index.html
@@ -26,19 +26,20 @@
   <meta name="robots" content="noindex" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" href="AIMT.png" sizes="any"/>
+  
 
   <!-- Open Graph & SEO tags -->
-  <meta property="og:title" content="An animated expandable menu built in FlutterFlow" />
-  <meta property="og:description" content="Use this template app to build your responsive web app." />
+  <meta property="og:title" content="AIMT Student" />
+  <meta property="og:description" content="Built with FlutterFlow." />
   <meta property="og:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" /> 
-  <meta name="twitter:title" content="An animated expandable menu built in FlutterFlow" />
-  <meta name="twitter:description" content="Use this template app to build your responsive web app." />
+  <meta name="twitter:title" content="AIMT Student" />
+  <meta name="twitter:description" content="Built with FlutterFlow." />
   <meta name="twitter:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <title> An animated expandable menu built in FlutterFlow </title>
-  <meta name="description" content="Use this template app to build your responsive web app." />
+  <title> AIMT Student </title>
+  <meta name="description" content="Built with FlutterFlow." />
     
 
   <!-- Status Bar color in Safari browser (iOS) and PWA -->
@@ -70,7 +71,7 @@
         },
         onEntrypointLoaded: async function(engineInitializer) {
           // Initialize the Flutter engine
-          let appRunner = await engineInitializer.initializeEngine({useColorEmoji: true,});
+          let appRunner = await engineInitializer.initializeEngine({});
           // Run the app
           await appRunner.runApp();
         }
