Updating to latest output.

--- a/web/index.html
+++ b/web/index.html
@@ -30,16 +30,16 @@
   
 
   <!-- Open Graph & SEO tags -->
-  <meta property="og:title" content="AIMT" />
-  <meta property="og:description" content="Built with FlutterFlow." />
-  <meta property="og:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" /> 
-  <meta name="twitter:title" content="AIMT" />
-  <meta name="twitter:description" content="Built with FlutterFlow." />
-  <meta name="twitter:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" />
+  <meta property="og:title" content="Streamline Campus Life with the Official AIMT App" />
+  <meta property="og:description" content="Get ready to unlock a world of possibilities with the official AIMT  app. Seamlessly manage your academic journey, connect with peers, and explore campus resources—all in one convenient place" />
+  <meta property="og:image" content="/assets/assets/images/Social_Share_Image.png" /> 
+  <meta name="twitter:title" content="Streamline Campus Life with the Official AIMT App" />
+  <meta name="twitter:description" content="Get ready to unlock a world of possibilities with the official AIMT  app. Seamlessly manage your academic journey, connect with peers, and explore campus resources—all in one convenient place" />
+  <meta name="twitter:image" content="/assets/assets/images/Social_Share_Image.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <title> AIMT </title>
-  <meta name="description" content="Built with FlutterFlow." />
+  <title> Streamline Campus Life with the Official AIMT App </title>
+  <meta name="description" content="Get ready to unlock a world of possibilities with the official AIMT  app. Seamlessly manage your academic journey, connect with peers, and explore campus resources—all in one convenient place" />
     
 
   <!-- Status Bar color in Safari browser (iOS) and PWA -->
